# ai-proposals

./: README.md  __init__.py  graph_loader.py  langgraph.json  pyproject.toml
src/: __init__.py
src/agents/: __init__.py  config.py  llm.py  registry.py
src/agents/graph/: __init__.py  nodes.py  proposal_graph.py  state.py
src/agents/master_agent/: __init__.py  agent.py  chat_test.py  test.py
src/agents/master_agent/prompts/: __init__.py  conversation_prompt.py  routing_prompt.py
src/agents/pipeline/: __init__.py  base_pipeline.py  edit_pipeline.py  full_proposal_pipeline.py  pipeline_executor.py  pipeline_factory.py
src/agents/services/: __init__.py
src/agents/services/pdf/: __init__.py  pdf_service.py
src/agents/services/text/: __init__.py  timeline_extractor.py
src/agents/subagents/: __init__.py
src/agents/subagents/business_analyst/: __init__.py  agent.py  handlers.py  prompts.py  test.py
src/agents/subagents/final_compilation/: __init__.py  agent.py  handlers.py  prompts.py  test.py
src/agents/subagents/project_manager/: __init__.py  agent.py  handlers.py  prompts.py  test.py
src/agents/subagents/resource_allocation/: __init__.py  agent.py  handlers.py  prompts.py  test.py
src/agents/subagents/scope_refinement/: __init__.py  agent.py  handlers.py  prompts.py  test.py
src/agents/subagents/technical_architect/: __init__.py  agent.py  handlers.py  prompts.py  test.py
src/agents/subagents/title/: __init__.py  agent.py  prompts.py  test.py
src/agents/tests/: __init__.py  utils.py
src/agents/utils/: __init__.py  constraint_extractor.py  idea_synthesizer.py  result.py  title_agent.py  utils.py
